# nonebot_plugin_steam_game_status

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
nonebot_plugin_steam_game_status/: __init__.py  api.py  config.py  model.py  source.py  utils.py
nonebot_plugin_steam_game_status.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nonebot_plugin_steam_game_status/templates/: steam_bind_card.html  steam_card.html
