[project]
name = "nonebot-plugin-steam-game-status"
version = "0.1.3"
description = "播报群友 Steam 游戏状态"
authors = [
    {name = "nek0us", email = "nekouss@mail.com"},
]
license = {text = "GPL3"}
dependencies = ["nonebot2>=2.0.0", "nonebot-adapter-onebot>=2.1.5", "nonebot-plugin-apscheduler>=0.2.0", "httpx>=0.23.3", "nonebot_plugin_sendmsg_by_bots>=0.0.4"]
requires-python = ">=3.8"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/nek0us/nonebot_plugin_steam_game_status"
Repository = "https://github.com/nek0us/nonebot_plugin_steam_game_status"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"